--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ permalink: /:year/:month/:day/:title/
 # Includes an icon in the footer for each username you enter
 footer-links:
   twitter: rukiii666
-  discord: https://discord.gg/XC2fKP5B3h
+  discord: https://discord.gg/bjf5PQsYH5
   youtube: channel/UCEfEPECAgGK_QboSxA-qKGA
 
 plugins:
