--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ author: ruki3
 logo: 
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics: G-53Y3H9J1EM
+google_analytics: G-FDLFCQ4S3Y
 
 permalink: /:year/:month/:day/:title/
 
