--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,9 @@ description: garden of skeletons
 # The full URL to your site. Note: site.github.url will be used by default.
 url: https://imponderabilium.xyz
 
+# allow to add posts supposedly made in the "future"
+future: true
+
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
